<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="2dp"
    app:cardBackgroundColor="@color/white"
    app:cardElevation="3dp"
    app:contentPadding="5dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/countryTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/country_name"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/countryTv">

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingStart="10dp"
                    android:text="@string/cases"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/casesTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingStart="10dp"
                    android:text="@string/strip"
                    android:textColor="@color/black" />
            </TableRow>
            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingStart="10dp"
                    android:text="@string/todayCases"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/todayCasesTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingStart="10dp"
                    android:text="@string/strip"
                    android:textColor="@color/black" />
            </TableRow>
            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingStart="10dp"
                    android:text="@string/deaths"
                    android:textColor="@color/colorRed" />

                <TextView
                    android:id="@+id/deathsTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingStart="10dp"
                    android:text="@string/strip"
                    android:textColor="@color/colorRed" />
            </TableRow>
            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingStart="10dp"
                    android:text="@string/todayDeaths"
                    android:textColor="@color/colorRed" />

                <TextView
                    android:id="@+id/todayDeathsTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingStart="10dp"
                    android:text="@string/strip"
                    android:textColor="@color/colorRed" />
            </TableRow>
            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingStart="10dp"
                    android:text="@string/recovered"
                    android:textColor="@color/colorGreen" />

                <TextView
                    android:id="@+id/recoveredTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingStart="10dp"
                    android:text="@string/strip"
                    android:textColor="@color/colorGreen" />
            </TableRow>
            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingStart="10dp"
                    android:text="@string/todayRecovered"
                    android:textColor="@color/colorGreen" />

                <TextView
                    android:id="@+id/todayRecoveredTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingStart="10dp"
                    android:text="@string/strip"
                    android:textColor="@color/colorGreen" />
            </TableRow>
        </TableLayout>

    </RelativeLayout>

</androidx.cardview.widget.CardView>