<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGray1"
    android:orientation="vertical"
    tools:context=".HomeFragment">

    <!-- TODO: Update blank fragment layout -->
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_gravity="center_horizontal"
        android:layout_margin="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="40dp"
        android:text="@string/info"
        android:textAlignment="center"
        android:textColor="@color/black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"
        android:background="@drawable/shape_react"
        android:orientation="horizontal"
        android:padding="8dp">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/total_cases"
            android:scaleType="fitXY"
            android:src="@drawable/shape_circle2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/total_cases"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/totalCasesTv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/strip"
            android:textAlignment="textEnd"
            android:textColor="@color/black"
            android:textSize="16sp" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"
        android:background="@drawable/shape_react"
        android:orientation="horizontal"
        android:padding="8dp">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/new_cases"
            android:scaleType="fitXY"
            android:src="@drawable/shape_circle2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/new_cases"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/newCasesTv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/strip"
            android:textAlignment="textEnd"
            android:textColor="@color/black"
            android:textSize="16sp" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"
        android:background="@drawable/shape_react"
        android:orientation="horizontal"
        android:padding="8dp">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/total_deaths"
            android:scaleType="fitXY"
            android:src="@drawable/shape_circle" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/total_deaths"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/totalDeathsTv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/strip"
            android:textAlignment="textEnd"
            android:textColor="@color/black"
            android:textSize="16sp" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"
        android:background="@drawable/shape_react"
        android:orientation="horizontal"
        android:padding="8dp">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/new_deaths"
            android:scaleType="fitXY"
            android:src="@drawable/shape_circle" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/new_deaths"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/newDeathsTv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/strip"
            android:textAlignment="textEnd"
            android:textColor="@color/black"
            android:textSize="16sp" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"
        android:background="@drawable/shape_react"
        android:orientation="horizontal"
        android:padding="8dp">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/total_recovered"
            android:scaleType="fitXY"
            android:src="@drawable/shape_circle3" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/total_recovered"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/totalRecoveredTv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/strip"
            android:textAlignment="textEnd"
            android:textColor="@color/black"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"
        android:background="@drawable/shape_react"
        android:orientation="horizontal"
        android:padding="8dp">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/newRecovered"
            android:scaleType="fitXY"
            android:src="@drawable/shape_circle3" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/newRecovered"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/newRecoveredTv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/strip"
            android:textAlignment="textEnd"
            android:textColor="@color/black"
            android:textSize="16sp" />

    </LinearLayout>

</LinearLayout>